[gd_scene load_steps=7 format=3 uid="uid://b3t47xddonbyj"]

[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="1_n3w1p"]
[ext_resource type="Texture2D" uid="uid://cypul5q3yjia0" path="res://Assets/Items/life icon.png" id="2_8nyd3"]
[ext_resource type="FontFile" uid="uid://c4c67c7roy8yr" path="res://Assets/fonts/at01.ttf" id="3_fseg4"]
[ext_resource type="Texture2D" uid="uid://dx3qwdkie3qyb" path="res://Assets/Items/coin icon.png" id="4_yoytv"]
[ext_resource type="Texture2D" uid="uid://d5f0a81dkv4l" path="res://Assets/Tileset/Johhan/HUD/HeartEmpty.png" id="5_s7ajf"]
[ext_resource type="Texture2D" uid="uid://0a4kngpd18p7" path="res://Assets/Tileset/Johhan/HUD/HeartFull.png" id="6_8osee"]

[node name="HUD" type="CanvasLayer"]

[node name="HudControler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3w1p")

[node name="Container" type="MarginContainer" parent="HudControler"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScoreContainer" type="HBoxContainer" parent="HudControler/Container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
metadata/_edit_lock_ = true

[node name="ScoreCounter" type="Label" parent="HudControler/Container/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0.192157, 0.133333, 0.172549, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_fseg4")
theme_override_font_sizes/font_size = 80
text = "000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpLeftContainer" type="BoxContainer" parent="HudControler/Container"]
clip_contents = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
vertical = true

[node name="LifeContainer" type="HBoxContainer" parent="HudControler/Container/UpLeftContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LifeIcon" type="TextureRect" parent="HudControler/Container/UpLeftContainer/LifeContainer"]
clip_contents = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("2_8nyd3")
expand_mode = 5
stretch_mode = 5

[node name="LifeCounter" type="Label" parent="HudControler/Container/UpLeftContainer/LifeContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0.192157, 0.133333, 0.172549, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_fseg4")
theme_override_font_sizes/font_size = 80
text = "00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsContainer" type="HBoxContainer" parent="HudControler/Container/UpLeftContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CoinsIcon" type="TextureRect" parent="HudControler/Container/UpLeftContainer/CoinsContainer"]
clip_contents = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_yoytv")
expand_mode = 5
stretch_mode = 5

[node name="CoinsCounter" type="Label" parent="HudControler/Container/UpLeftContainer/CoinsContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0.192157, 0.133333, 0.172549, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_fseg4")
theme_override_font_sizes/font_size = 80
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartsContainer" type="MarginContainer" parent="HudControler"]
layout_mode = 0
offset_left = 120.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_top = 8

[node name="HealthFull" type="TextureRect" parent="HudControler/HeartsContainer"]
clip_contents = true
custom_minimum_size = Vector2(72, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_8osee")
expand_mode = 1
stretch_mode = 1

[node name="HealthEmpty" type="TextureRect" parent="HudControler/HeartsContainer"]
clip_contents = true
custom_minimum_size = Vector2(72, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_s7ajf")
expand_mode = 1
stretch_mode = 1
